# trollboard

./: .gitignore  readme.md
app/: .gitignore  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/dev/catte/trollboard/: MainActivity.kt
app/app/src/main/java/dev/catte/trollboard/service/: NsdService.kt  WsServer.kt
app/app/src/main/java/dev/catte/trollboard/ui/component/: SvgImage.kt
app/app/src/main/java/dev/catte/trollboard/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/drawable/: trollface.xml
app/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
daemon/: Cargo.toml
daemon/macros/: Cargo.toml
daemon/macros/src/: lib.rs
daemon/src/: action.rs  main.rs
daemon/src/buttons/: flip_screen.rs  lock_mouse.rs  mod.rs  run_narrator.rs  swap_mouse.rs  win_key.rs
daemon/src/macros/: sudo.rs
